plugins {
    id 'java-library'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}
shadowJar{
    outputs.upToDateWhen { false }
    archiveClassifier.set('fat')
    minimize {
      exclude(dependency(':premain'))
    }
    dependencies {
        exclude("META-INF/maven/**")
        exclude("META-INF/*.txt")
        exclude("*.blob")
        exclude("*.enc")
        exclude("*.clazz")
    }

}
java {
    group = 'com.nixiedroid.urlwrapper'
    version = ''
    base.archivesName = 'URLWrapper'
    sourceCompatibility = "11"
    targetCompatibility = "11"
    toolchain {
        languageVersion = JavaLanguageVersion.of(11)
    }
}

repositories {
    mavenCentral()
}
compileJava {
   options.compilerArgs << "--add-exports=java.base/sun.net.www.protocol.https=ALL-UNNAMED"
    options.compilerArgs << "--add-exports=java.base/sun.net.www.protocol.http=ALL-UNNAMED"
}

dependencies {
    implementation project(':core')
    implementation project(':premain')
    implementation 'org.javassist:javassist:3.30.2-GA'
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}
jar {
    manifest {
        attributes('Premain-Class': 'com.nixiedroid.premain.Premain',
                'Can-Retransform-Classes': 'true')
    }
}
test {
    useJUnitPlatform()
    test.systemProperty 'urlWrapper.log', 'true'
}
